--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
 
+pre {
+  font-family: Inconsolata, monospace;
+  margin: 0;
+}
+
 .pageMargin {
   margin: 5px;
 }
@@ -26,4 +31,13 @@
 
 .fullWidth {
   width: 100%;
+}
+
+.centerContent {
+  display: flex;
+  justify-content: center;
+}
+
+.emeditorLogo {
+  width: 150px;
 }
