--- a/src/components/style.css
+++ b/src/components/style.css
@@ -17,13 +17,6 @@
   margin-top: 5px;
 }
 
-.bottomBar {
-  margin-top: 30px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
 .fullWidth {
   width: 100%;
 }
@@ -35,4 +28,8 @@
 
 .removeUnderline {
   text-decoration: none;
+}
+
+.smallIcon * > i {
+  font-size: 1em;
 }
